[tool.poetry]
name = "berry-flux-diag"
version = "0.1.0"
description = ""
authors = ["John Bonini <jrbp@user.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
pymatgen = "^2022.0.16"
abipy = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
